Wrong order of Auto Smooth GN modifier #116395

Closed
opened 2023-12-20 19:58:22 +01:00 by nameless · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.34

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-20 13:27, hash: 408bc52bedb7
Worked: 4.0 and older

Short description of error
In 4.1, Auto Smooth was moved to Geometry Nodes. Meshes from 4.0 and older blender versions, when loaded into 4.1, have added Auto Smooth GN. However, it causes incorrect shading. Moving Auto Smooth GN from bottom to top solves this issue entirely and shading looks exactly as in 4.0 and older versions.

This is how looks before moving Auto Smooth GN:
1

And this is after moving Auto Smooth GN from bottom of list to top:
2

Exact steps for others to reproduce the error

  1. Open provided .blend file
  2. In solid view, you can see strange shading (triangles/shadows)
  3. Move Auto Smooth GN from bottom to top of list
  4. Shading is correct now

In current state of 4.1, it would mean that for older projects to work properly in 4.1, I would have to adjust GN of dozens/hundreds meshes.

Would it be possible for 4.1 to move Auto Smooth GN automatically to top of list?

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.34 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-20 13:27, hash: `408bc52bedb7` Worked: 4.0 and older **Short description of error** In 4.1, Auto Smooth was moved to Geometry Nodes. Meshes from 4.0 and older blender versions, when loaded into 4.1, have added Auto Smooth GN. However, it causes incorrect shading. Moving Auto Smooth GN from bottom to top solves this issue entirely and shading looks exactly as in 4.0 and older versions. This is how looks before moving Auto Smooth GN: ![1](/attachments/23c498c1-4f53-4699-880f-885657e2efa0) And this is after moving Auto Smooth GN from bottom of list to top: ![2](/attachments/d292bc23-42a9-43e8-b5da-c9dc077ee968) **Exact steps for others to reproduce the error** 1. Open provided .blend file 2. In solid view, you can see strange shading (triangles/shadows) 3. Move Auto Smooth GN from bottom to top of list 4. Shading is correct now In current state of 4.1, it would mean that for older projects to work properly in 4.1, I would have to adjust GN of dozens/hundreds meshes. Would it be possible for 4.1 to move Auto Smooth GN automatically to top of list?
nameless added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-20 19:58:23 +01:00
@HooglyBoogly /
Member

Guess auto-smooth should be at bottom? Otherwise it'll tweak Normal before modifiers.

Guess auto-smooth should be at bottom? Otherwise it'll tweak Normal before modifiers.
Pratik Borhade added
Module
Modeling
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-12-21 06:53:20 +01:00
Member

Hi, thanks for the report. I can confirm the change in your setup. But I'm not sure it's as simple as just moving the modifier to be first.

As far as I can tell, the previous behavior was that the split normals were calculated right before the weighted normal modifier. Moving the auto smooth modifier directly before the weighted normal modifier seems to work, except for a black artifact on the large trapezoid face. I'm not sure where that's coming from yet.

However, it also looks like just removing the new modifier works in your setup. "Auto smooth" was only necessary before because it was the only way to enable custom normals.

Hi, thanks for the report. I can confirm the change in your setup. But I'm not sure it's as simple as just moving the modifier to be first. As far as I can tell, the previous behavior was that the split normals were calculated right before the weighted normal modifier. Moving the auto smooth modifier directly before the weighted normal modifier seems to work, except for a black artifact on the large trapezoid face. I'm not sure where that's coming from yet. However, it also looks like just removing the new modifier works in your setup. "Auto smooth" was only necessary before because it was the only way to enable custom normals.
Author

Hi, thanks for the report. I can confirm the change in your setup. But I'm not sure it's as simple as just moving the modifier to be first.

As far as I can tell, the previous behavior was that the split normals were calculated right before the weighted normal modifier. Moving the auto smooth modifier directly before the weighted normal modifier seems to work, except for a black artifact on the large trapezoid face. I'm not sure where that's coming from yet.

However, it also looks like just removing the new modifier works in your setup. "Auto smooth" was only necessary before because it was the only way to enable custom normals.

I've poked around black triangle and turns out in one corner there were 2 very close vertices instead of 1. So that's modeling error on my part. When those get merged into 1, the black triangle is gone. I've attached updated .blend file.

Thanks for reply, but I'm not sure what implications would be for future 4.1 release and opening my old projects. Or does it require further investigation? Sorry, I'm not super technically versed :)

> Hi, thanks for the report. I can confirm the change in your setup. But I'm not sure it's as simple as just moving the modifier to be first. > > As far as I can tell, the previous behavior was that the split normals were calculated right before the weighted normal modifier. Moving the auto smooth modifier directly before the weighted normal modifier seems to work, except for a black artifact on the large trapezoid face. I'm not sure where that's coming from yet. > > However, it also looks like just removing the new modifier works in your setup. "Auto smooth" was only necessary before because it was the only way to enable custom normals. > I've poked around black triangle and turns out in one corner there were 2 very close vertices instead of 1. So that's modeling error on my part. When those get merged into 1, the black triangle is gone. I've attached updated .blend file. Thanks for reply, but I'm not sure what implications would be for future 4.1 release and opening my old projects. Or does it require further investigation? Sorry, I'm not super technically versed :)
Author

Hi, thanks for the report. I can confirm the change in your setup. But I'm not sure it's as simple as just moving the modifier to be first.

As far as I can tell, the previous behavior was that the split normals were calculated right before the weighted normal modifier. Moving the auto smooth modifier directly before the weighted normal modifier seems to work, except for a black artifact on the large trapezoid face. I'm not sure where that's coming from yet.

However, it also looks like just removing the new modifier works in your setup. "Auto smooth" was only necessary before because it was the only way to enable custom normals.

Any update, @HooglyBoogly ? I've downloaded latest 4.1 build and the regression is still there - incorrect shading when loading older projects. 4.1 is getting closer to release day and I'm worried issue is dusting on shelf.

> Hi, thanks for the report. I can confirm the change in your setup. But I'm not sure it's as simple as just moving the modifier to be first. > > As far as I can tell, the previous behavior was that the split normals were calculated right before the weighted normal modifier. Moving the auto smooth modifier directly before the weighted normal modifier seems to work, except for a black artifact on the large trapezoid face. I'm not sure where that's coming from yet. > > However, it also looks like just removing the new modifier works in your setup. "Auto smooth" was only necessary before because it was the only way to enable custom normals. > Any update, @HooglyBoogly ? I've downloaded latest 4.1 build and the regression is still there - incorrect shading when loading older projects. 4.1 is getting closer to release day and I'm worried issue is dusting on shelf.
Member

Thanks for the reminder. It's a bit tricky to generalize this while being confident about a proper conversion from all old files. But testing the file again, my current conclusion is that adding the modifier with versioning is unnecessary when the last modifier in the stack is a weighted normal modifier. This week I'll test that in some more cases. Hopefully it is that simple.

Thanks for the reminder. It's a bit tricky to generalize this while being confident about a proper conversion from all old files. But testing the file again, my current conclusion is that adding the modifier with versioning is unnecessary when the last modifier in the stack is a weighted normal modifier. This week I'll test that in some more cases. Hopefully it is that simple.
Hans Goudey added
Status
Confirmed
Type
Bug
and removed
Status
Needs Info from Developers
Type
Report
labels 2024-03-08 21:58:39 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-08 22:37:19 +01:00
Author

Hi Hans, thanks for fix. I've loaded project and inspected, there's improvement, but there also still issue on assets that require auto smooth to be kept from blender 4.0. Basically 'Keep Sharp' option in Weighted Normal modifier doesn't work until there's auto smoothing. To get shading identical to what I have in 4.0 and earlier, I have to add Auto Smooth modifier above Weighted Normal modifier.

This is what asset looks in 4.0 (correct look)
correct.png

In blender 4.1 (sharp/non-beveled edges aren't sharp). Toggling on/off the 'Keep Sharp' option in Weighted Normal modifier does very little compared to blender 4.0
notsharp.png

When I add Auto Smooth modifier above Weighted Normal
image

The shading in 4.1 becomes correct - as in 4.0 - and toggling Keep Sharp option in Weighted Normal modifier also behaves exactly same as in 4.0.

Conclusion - adding conditional to not add Auto Smooth helped with shading, but not completely and the shading issue severity (mainly with keeping sharp edges sharp) depends on geometry of asset. I think in my case, if blender 4.1 detects both auto smoothing and Weighted Normal, it has to add Auto Smooth modifier with similar angle value above Weighted Normal? I'm not sure exactly what the issue is, but at current state, it's still not feasible for me to open older projects with auto smooth+bevel+weighted normal combo on hard surface assets - I would have to add Auto Smooth to all assets, above Weighted Normal modifiers to get their shading matched to blender 4.0.

I've attached simplified .blend file

EDIT: I realized that in 4.0, if auto smooth is disabled in mesh data properties, the Weighted Normal modifier shows a warning that auto smoothing has to be enabled for modifier to work properly, I guess this modifier still relies on auto smoothing in 4.1?

Hi Hans, thanks for fix. I've loaded project and inspected, there's improvement, but there also still issue on assets that require auto smooth to be kept from blender 4.0. Basically 'Keep Sharp' option in Weighted Normal modifier doesn't work until there's auto smoothing. To get shading identical to what I have in 4.0 and earlier, I have to add Auto Smooth modifier above Weighted Normal modifier. This is what asset looks in 4.0 (correct look) ![correct.png](/attachments/c6f84764-a7cc-4cc3-8141-6e2e831350b3) In blender 4.1 (sharp/non-beveled edges aren't sharp). Toggling on/off the 'Keep Sharp' option in Weighted Normal modifier does very little compared to blender 4.0 ![notsharp.png](/attachments/e8b06ad8-48a1-474a-b9b1-87562c09a006) When I add Auto Smooth modifier above Weighted Normal ![image](/attachments/6ae4cf8f-9e56-4406-9618-b42d69e73b58) The shading in 4.1 becomes correct - as in 4.0 - and toggling Keep Sharp option in Weighted Normal modifier also behaves exactly same as in 4.0. Conclusion - adding conditional to not add Auto Smooth helped with shading, but not completely and the shading issue severity (mainly with keeping sharp edges sharp) depends on geometry of asset. I think in my case, if blender 4.1 detects both auto smoothing and Weighted Normal, it has to add Auto Smooth modifier with similar angle value above Weighted Normal? I'm not sure exactly what the issue is, but at current state, it's still not feasible for me to open older projects with auto smooth+bevel+weighted normal combo on hard surface assets - I would have to add Auto Smooth to all assets, above Weighted Normal modifiers to get their shading matched to blender 4.0. I've attached simplified .blend file EDIT: I realized that in 4.0, if auto smooth is disabled in mesh data properties, the Weighted Normal modifier shows a warning that auto smoothing has to be enabled for modifier to work properly, I guess this modifier still relies on auto smoothing in 4.1?
nameless reopened this issue 2024-03-09 13:23:26 +01:00
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2024-03-09 13:23:28 +01:00
Member

Thanks! I moved that to a separate issue #119398 just to keep things tidy since it is a slightly different problem. I'll close this one now then.

Thanks! I moved that to a separate issue #119398 just to keep things tidy since it is a slightly different problem. I'll close this one now then.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2024-03-12 21:35:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116395
No description provided.